--- a/src/main/resources/templates/auth/twitch/index.html
+++ b/src/main/resources/templates/auth/twitch/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="https://ree6.de/styles/style.css"/>
-    <link rel="icon" href="https://ree6.de/imgs/logo.png"/>
+    <link rel="stylesheet" href="https:///support.github.com/Quick-Community/site/blob/main/styles/style.css"/>
+    <link rel="icon" href="https:///support.github.com/Quick-Community/site/blob/main/imgs/logo.png"/>
     <title>REE6 | Twitch</title>
     <style>
         footer {
@@ -138,15 +138,15 @@
         </div>
         <div class="nav-list">
             <strong>Legal</strong>
-            <a href="https://ree6.de/privacy/">Privacy Policy</a>
-            <a href="https://ree6.de/impressum/">Impressum</a>
-            <a href="https://ree6.de/protection/">Data Protection</a>
+            <a href="https:///support.github.com/Quick-Community/site/blob/main/privacy/">Privacy Policy</a>
+            <a href="https:///support.github.com/Quick-Community/site/blob/main/impressum/">Impressum</a>
+            <a href="https:///support.github.com/Quick-Community/site/blob/main/protection/">Data Protection</a>
             <button
-                    data-copy="legal@ree6.de"
+                    data-copy="legal@/support.github.com/Quick-Community/site/blob/main"
                     data-color-background="#ef2222"
                     data-color-dot="#fff"
             >
-                legal@ree6.de
+                legal@/support.github.com/Quick-Community/site/blob/main
             </button>
         </div>
         <div class="nav-list">
@@ -170,11 +170,11 @@
             >Github</a
             >
             <button
-                    data-copy="support@ree6.de"
+                    data-copy="support@/support.github.com/Quick-Community/site/blob/main"
                     data-color-background="#ef2222"
                     data-color-dot="#fff"
             >
-                support@ree6.de
+                support@/support.github.com/Quick-Community/site/blob/main
             </button>
         </div>
     </div>
@@ -195,11 +195,11 @@
         >
         ©Ree6 <span data-time="0"></span>
     </div>
-    <script src="https://ree6.de/js/time.js"></script>
-    <script src="https://ree6.de/js/navigation.js"></script>
-    <script src="https://ree6.de/js/cursor.js"></script>
-    <script src="https://ree6.de/js/vanilla-tilt.js"></script>
-    <script src="https://ree6.de/js/logging.js"></script>
+    <script src="https:///support.github.com/Quick-Community/site/blob/main/js/time.js"></script>
+    <script src="https:///support.github.com/Quick-Community/site/blob/main/js/navigation.js"></script>
+    <script src="https:///support.github.com/Quick-Community/site/blob/main/js/cursor.js"></script>
+    <script src="https:///support.github.com/Quick-Community/site/blob/main/js/vanilla-tilt.js"></script>
+    <script src="https:///support.github.com/Quick-Community/site/blob/main/js/logging.js"></script>
 </footer>
 </body>
 </html>
