--- a/src/main/resources/templates/panel/index.html
+++ b/src/main/resources/templates/panel/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://ree6.de/styles/style.css" />
-    <link rel="icon" href="https://ree6.de/imgs/logo.png" />
+    <link rel="stylesheet" href="https://github.com/Quick-Community/site/blob/main/styles/style.css" />
+    <link rel="icon" href="https://github.com/Quick-Community/site/blob/main/imgs/logo.png" />
     <title>REE6 | Server Panel</title>
     <style>
         footer {
@@ -63,7 +63,7 @@
 <body>
 <script th:if="${firstTime}">
     function openInvite(){
-        window.open("https://support.ree6.de", "_blank");
+        window.open("https://support.github.com/Quick-Community/site/blob/main", "_blank");
     }
 </script>
 <div class="transition-fade"></div>
@@ -125,13 +125,13 @@
                 data-color-border="#000"
         >
             <div class="server-img">
-                <img th:src="${guild.getIconUrl()}" src="https://ree6.de/serverlogo/base.svg" alt="Base Server Logo" />
+                <img th:src="${guild.getIconUrl()}" src="https://github.com/Quick-Community/site/blob/main/serverlogo/base.svg" alt="Base Server Logo" />
             </div>
             <h3 th:text="${guild.getName()}">SERVER</h3>
             <a th:if="${firstTime}" th:text="${guild.botJoined()} ? 'Manage' : 'Setup'" onclick="openInvite()" th:href="${!guild.botJoined()} ?
-            'https://discord.com/oauth2/authorize?client_id=723655291681505380&scope=applications.commands%20bot&permissions=8&redirect_uri=https%3A%2F%2Fcp.ree6.de%2Fserver%2F&guild_id=' + ${guild.getIdLong()} : '/server?guildId=' + ${guild.getIdLong()}" href="/server/">Manage</a>
+            'https://discord.com/oauth2/authorize?client_id=723655291681505380&scope=applications.commands%20bot&permissions=8&redirect_uri=https%3A%2F%2Fcp.github.com/Quick-Community/site/blob/main%2Fserver%2F&guild_id=' + ${guild.getIdLong()} : '/server?guildId=' + ${guild.getIdLong()}" href="/server/">Manage</a>
             <a th:unless="${firstTime}" th:text="${guild.botJoined()} ? 'Manage' : 'Setup'" onclick="openInvite()" th:href="${!guild.botJoined()} ?
-            'https://discord.com/oauth2/authorize?client_id=723655291681505380&scope=applications.commands%20bot&permissions=8&redirect_uri=https%3A%2F%2Fcp.ree6.de%2Fserver%2F&guild_id=' + ${guild.getIdLong()} : '/server?guildId=' + ${guild.getIdLong()}" href="/server/">Manage</a>
+            'https://discord.com/oauth2/authorize?client_id=723655291681505380&scope=applications.commands%20bot&permissions=8&redirect_uri=https%3A%2F%2Fcp.github.com/Quick-Community/site/blob/main%2Fserver%2F&guild_id=' + ${guild.getIdLong()} : '/server?guildId=' + ${guild.getIdLong()}" href="/server/">Manage</a>
         </div>
     </section>
 </main>
@@ -150,21 +150,21 @@
         </div>
         <div class="nav-list">
             <strong>Legal</strong>
-            <a href="https://ree6.de/privacy/">Privacy Policy</a>
-            <a href="https://ree6.de/impressum/">Impressum</a>
-            <a href="https://ree6.de/protection/">Data Protection</a>
+            <a href="https://github.com/Quick-Community/site/blob/main/privacy/">Privacy Policy</a>
+            <a href="https://github.com/Quick-Community/site/blob/main/impressum/">Impressum</a>
+            <a href="https://github.com/Quick-Community/site/blob/main/protection/">Data Protection</a>
             <button
-                    data-copy="legal@ree6.de"
+                    data-copy="legal@github.com/Quick-Community/site/blob/main"
                     data-color-background="#ef2222"
                     data-color-dot="#fff"
             >
-                legal@ree6.de
+                legal@github.com/Quick-Community/site/blob/main
             </button>
         </div>
         <div class="nav-list">
             <strong>Contact</strong>
             <a
-                    href="https://support.ree6.de"
+                    href="https://support.github.com/Quick-Community/site/blob/main"
                     target="_blank"
                     rel="noopener noreferrer"
             >Discord</a
@@ -182,11 +182,11 @@
             >Github</a
             >
             <button
-                    data-copy="support@ree6.de"
+                    data-copy="support@github.com/Quick-Community/site/blob/main"
                     data-color-background="#ef2222"
                     data-color-dot="#fff"
             >
-                support@ree6.de
+                support@github.com/Quick-Community/site/blob/main
             </button>
         </div>
     </div>
@@ -207,10 +207,10 @@
         >
         ©Ree6 <span data-time="0"></span>
     </div>
-    <script src="https://ree6.de/js/time.js"></script>
-    <script src="https://ree6.de/js/navigation.js"></script>
-    <script src="https://ree6.de/js/cursor.js"></script>
-    <script src="https://ree6.de/js/vanilla-tilt.js"></script>
+    <script src="https://github.com/Quick-Community/site/blob/main/js/time.js"></script>
+    <script src="https://github.com/Quick-Community/site/blob/main/js/navigation.js"></script>
+    <script src="https://github.com/Quick-Community/site/blob/main/js/cursor.js"></script>
+    <script src="https://github.com/Quick-Community/site/blob/main/js/vanilla-tilt.js"></script>
 </footer>
 </body>
 </html>
