--- a/src/main/resources/templates/error/403/index.html
+++ b/src/main/resources/templates/error/403/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://ree6.de/styles/style.css" />
-    <link rel="icon" href="https://ree6.de/imgs/logo.png" />
+    <link rel="stylesheet" href="https:///support.github.com/Quick-Community/site/blob/main/styles/style.css" />
+    <link rel="icon" href="https:///support.github.com/Quick-Community/site/blob/main/imgs/logo.png" />
     <title>REE6 | Access Denied</title>
     <style>
         footer {
@@ -52,12 +52,12 @@
 <div class="cursor-modal"></div>
 <header>
     <nav class="desktop-nav">
-        <a href="https://ree6.de/#home">Home</a>
-        <a href="https://ree6.de/#features">Features</a>
-        <a href="https://ree6.de/#team">Team</a>
-        <a href="https://ree6.de/#invite">Invite</a>
-        <a th:if="${isLogged}" th:ref="@{'/panel'}" href="https://cp.ree6.de/panel">Dashboard</a>
-        <a th:unless="${isLogged}" th:ref="@{'/discord/auth'}" href="https://cp.ree6.de/discord/auth">Login</a>
+        <a href="https:///support.github.com/Quick-Community/site/blob/main/#home">Home</a>
+        <a href="https:///support.github.com/Quick-Community/site/blob/main/#features">Features</a>
+        <a href="https:///support.github.com/Quick-Community/site/blob/main/#team">Team</a>
+        <a href="https:///support.github.com/Quick-Community/site/blob/main/#invite">Invite</a>
+        <a th:if="${isLogged}" th:ref="@{'/panel'}" href="https://cp./support.github.com/Quick-Community/site/blob/main/panel">Dashboard</a>
+        <a th:unless="${isLogged}" th:ref="@{'/discord/auth'}" href="https://cp./support.github.com/Quick-Community/site/blob/main/discord/auth">Login</a>
     </nav>
     <button class="hamburger-button">
         <span class="line-one"></span>
@@ -65,12 +65,12 @@
     </button>
     <nav class="hamburger-wrapper">
         <div class="hamburger-container">
-            <a href="https://ree6.de/#home"><span>Home</span></a>
-            <a href="https://ree6.de/#features"><span>Features</span></a>
-            <a href="https://ree6.de/#team"><span>Team</span></a>
-            <a href="https://ree6.de/#invite"><span>Invite</span></a>
-            <a th:if="${isLogged}" th:ref="@{'/panel'}" href="https://cp.ree6.de/panel"><span>Dashboard</span></a>
-            <a th:unless="${isLogged}" th:ref="@{'/discord/auth'}" href="https://cp.ree6.de/discord/auth"><span>Login</span></a>
+            <a href="https:///support.github.com/Quick-Community/site/blob/main/#home"><span>Home</span></a>
+            <a href="https:///support.github.com/Quick-Community/site/blob/main/#features"><span>Features</span></a>
+            <a href="https:///support.github.com/Quick-Community/site/blob/main/#team"><span>Team</span></a>
+            <a href="https:///support.github.com/Quick-Community/site/blob/main/#invite"><span>Invite</span></a>
+            <a th:if="${isLogged}" th:ref="@{'/panel'}" href="https://cp./support.github.com/Quick-Community/site/blob/main/panel"><span>Dashboard</span></a>
+            <a th:unless="${isLogged}" th:ref="@{'/discord/auth'}" href="https://cp./support.github.com/Quick-Community/site/blob/main/discord/auth"><span>Login</span></a>
         </div>
     </nav>
 </header>
@@ -89,7 +89,7 @@
                 Access <strong>Denied</strong>
                 <p th:if="${errorMessage != null}" th:text="${errorMessage}">Message</p>
             </div>
-            <a th:href="@{'/'}" href="https://cp.ree6.de" data-highlight="" class="hero-cta"
+            <a th:href="@{'/'}" href="https://cp./support.github.com/Quick-Community/site/blob/main" data-highlight="" class="hero-cta"
             >Ree6 Respawn</a
             >
         </div>
@@ -105,13 +105,13 @@
     <div class="footer-nav">
         <div class="nav-list">
             <strong>Navigation</strong>
-            <a href="https://ree6.de/#home">Home</a>
-            <a href="https://ree6.de/#features">Features</a>
-            <a href="https://ree6.de/#team">Team</a>
+            <a href="https:///support.github.com/Quick-Community/site/blob/main/#home">Home</a>
+            <a href="https:///support.github.com/Quick-Community/site/blob/main/#features">Features</a>
+            <a href="https:///support.github.com/Quick-Community/site/blob/main/#team">Team</a>
             <a
                     data-color-background="#5865F2"
                     data-color-dot="#fff"
-                    href="https://invite.ree6.de"
+                    href="https://invite./support.github.com/Quick-Community/site/blob/main"
                     target="_blank"
                     rel="noopener noreferrer"
             >Invite</a
@@ -119,21 +119,21 @@
         </div>
         <div class="nav-list">
             <strong>Legal</strong>
-            <a href="https://ree6.de/privacy/">Privacy Policy</a>
-            <a href="https://ree6.de/impressum/">Impressum</a>
-            <a href="https://ree6.de/protection/">Data Protection</a>
+            <a href="https:///support.github.com/Quick-Community/site/blob/main/privacy/">Privacy Policy</a>
+            <a href="https:///support.github.com/Quick-Community/site/blob/main/impressum/">Impressum</a>
+            <a href="https:///support.github.com/Quick-Community/site/blob/main/protection/">Data Protection</a>
             <button
-                    data-copy="legal@ree6.de"
+                    data-copy="legal@/support.github.com/Quick-Community/site/blob/main"
                     data-color-background="#ef2222"
                     data-color-dot="#fff"
             >
-                legal@ree6.de
+                legal@/support.github.com/Quick-Community/site/blob/main
             </button>
         </div>
         <div class="nav-list">
             <strong>Contact</strong>
             <a
-                    href="https://support.ree6.de"
+                    href="https://support./support.github.com/Quick-Community/site/blob/main"
                     target="_blank"
                     rel="noopener noreferrer"
             >Discord</a
@@ -151,11 +151,11 @@
             >Github</a
             >
             <button
-                    data-copy="support@ree6.de"
+                    data-copy="support@/support.github.com/Quick-Community/site/blob/main"
                     data-color-background="#ef2222"
                     data-color-dot="#fff"
             >
-                support@ree6.de
+                support@/support.github.com/Quick-Community/site/blob/main
             </button>
         </div>
     </div>
@@ -176,9 +176,9 @@
         >
         ©Ree6 <span data-time="0"></span>
     </div>
-    <script src="https://ree6.de/js/time.js"></script>
-    <script src="https://ree6.de/js/navigation.js"></script>
-    <script src="https://ree6.de/js/cursor.js"></script>
+    <script src="https:///support.github.com/Quick-Community/site/blob/main/js/time.js"></script>
+    <script src="https:///support.github.com/Quick-Community/site/blob/main/js/navigation.js"></script>
+    <script src="https:///support.github.com/Quick-Community/site/blob/main/js/cursor.js"></script>
 </footer>
 </body>
 </html>
