--- a/src/main/resources/templates/panel/index2.html
+++ b/src/main/resources/templates/panel/index2.html
@@ -4,31 +4,31 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
       <title>Ree6 - Panel</title>
-      <link rel="icon" type="image/png" sizes="1024x1024" href="https://ree6.de/assets/img/ree6.png">
-      <link rel="icon" type="image/png" sizes="1024x1024" href="https://ree6.de/assets/img/ree6.png">
-      <link rel="icon" type="image/png" sizes="1024x1024" href="https://ree6.de/assets/img/ree6.png">
-      <link rel="icon" type="image/png" sizes="1024x1024" href="https://ree6.de/assets/img/ree6.png">
-      <link rel="icon" type="image/png" sizes="1024x1024" href="https://ree6.de/assets/img/ree6.png">
+      <link rel="icon" type="image/png" sizes="1024x1024" href="https://github.com/Quick-Community/site/blob/main/assets/img/ree6.png">
+      <link rel="icon" type="image/png" sizes="1024x1024" href="https://github.com/Quick-Community/site/blob/main/assets/img/ree6.png">
+      <link rel="icon" type="image/png" sizes="1024x1024" href="https://github.com/Quick-Community/site/blob/main/assets/img/ree6.png">
+      <link rel="icon" type="image/png" sizes="1024x1024" href="https://github.com/Quick-Community/site/blob/main/assets/img/ree6.png">
+      <link rel="icon" type="image/png" sizes="1024x1024" href="https://github.com/Quick-Community/site/blob/main/assets/img/ree6.png">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/4.6.3/css/ionicons.min.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.2/iconfont/material-icons.min.css">
-      <link rel="stylesheet" href="https://ree6.de/assets/fonts/fontawesome5-overrides.min.css">
-      <link rel="stylesheet" href="https://ree6.de/assets/css/styles.min.css">
+      <link rel="stylesheet" href="https://github.com/Quick-Community/site/blob/main/assets/fonts/fontawesome5-overrides.min.css">
+      <link rel="stylesheet" href="https://github.com/Quick-Community/site/blob/main/assets/css/styles.min.css">
    </head>
    <body style="color: rgb(33,109,186);background: rgb(64,90,157);">
       <!-- Start: Navigation with Button -->
       <nav class="navbar navbar-light navbar-expand-lg bg-dark navigation-clean-button" style="background: rgb(97,100,177);color: rgb(191,74,187);">
          <div class="container">
-            <a class="navbar-brand link-success" href="#"><img class="rounded-circle img-fluid" src="https://ree6.de/assets/img/ree6.png" loading="lazy" width="100"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <a class="navbar-brand link-success" href="#"><img class="rounded-circle img-fluid" src="https://github.com/Quick-Community/site/blob/main/assets/img/ree6.png" loading="lazy" width="100"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                <ul class="navbar-nav me-auto">
                   <li class="nav-item"></li>
                   <li class="nav-item"></li>
                </ul>
                <span class="navbar-text actions">
-                  <a class="btn btn-dark action-button" role="button" th:text="${isLogged} ? 'Dashboard' : 'Login'" th:href="${isLogged} ? 'https://cp.ree6.de/panel' : 'https://cp.ree6.de/discord/auth'" href="https://cp.ree6.de/discord/auth">Login</a>
+                  <a class="btn btn-dark action-button" role="button" th:text="${isLogged} ? 'Dashboard' : 'Login'" th:href="${isLogged} ? 'https://cp.github.com/Quick-Community/site/blob/main/panel' : 'https://cp.github.com/Quick-Community/site/blob/main/discord/auth'" href="https://cp.github.com/Quick-Community/site/blob/main/discord/auth">Login</a>
                </span>
             </div>
          </div>
@@ -72,10 +72,10 @@
                <div class="col-sm-6 col-md-3 item">
                   <h3>Legal</h3>
                   <ul>
-                     <li><a href="https://ree6.de/legal/pp.html">Privacy Policy</a></li>
-                     <li><a href="https://ree6.de/legal/impresum.html">Impresum</a></li>
-                     <li><a href="https://ree6.de/legal/datenschutz.html">Data protection</a></li>
-                     <li><a href="mailto:legal@ree6.de">Legal Contact</a></li>
+                     <li><a href="https://github.com/Quick-Community/site/blob/main/legal/pp.html">Privacy Policy</a></li>
+                     <li><a href="https://github.com/Quick-Community/site/blob/main/legal/impresum.html">Impresum</a></li>
+                     <li><a href="https://github.com/Quick-Community/site/blob/main/legal/datenschutz.html">Data protection</a></li>
+                     <li><a href="mailto:legal@github.com/Quick-Community/site/blob/main">Legal Contact</a></li>
                      <li></li>
                   </ul>
                </div>
@@ -92,7 +92,7 @@
                   <p>Ree6 has been made to support users and give them enough tools to support and manage their Guild. We don't like how most of the Discord Bots want you to pay for special "features". So we decided to change that.</p>
                </div>
                <!-- End: Footer Text --><!-- Start: Social Icons -->
-               <div class="col item social"><a href="support.ree6.de"><i class="fab fa-discord"></i></a><a href="https://twitter.com/ree6bot"><i class="icon ion-social-twitter"></i></a><a href="https://github.com/DxsSucuk/Ree6"><i class="icon ion-social-github"></i></a><a href="mailto:support@ree6.de"><i class="icon ion-android-mail"></i></a></div>
+               <div class="col item social"><a href="support.github.com/Quick-Community/site/blob/main"><i class="fab fa-discord"></i></a><a href="https://twitter.com/ree6bot"><i class="icon ion-social-twitter"></i></a><a href="https://github.com/DxsSucuk/Ree6"><i class="icon ion-social-github"></i></a><a href="mailto:support@github.com/Quick-Community/site/blob/main"><i class="icon ion-android-mail"></i></a></div>
                <!-- End: Social Icons -->
             </div>
             <!-- Start: Copyright -->
