--- a/src/main/resources/templates/panel/recording/index.html
+++ b/src/main/resources/templates/panel/recording/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://ree6.de/styles/style.css" />
-    <link rel="icon" href="https://ree6.de/imgs/logo.png" />
+    <link rel="stylesheet" href="https://github.com/Quick-Community/site/blob/main/styles/style.css" />
+    <link rel="icon" href="https://github.com/Quick-Community/site/blob/main/imgs/logo.png" />
     <title>REE6 | Recording</title>
     <style>
         footer {
@@ -170,9 +170,9 @@
             >
                 <!-- INSERT SERVER IMAGE PATH IN IMG SRC -->
                 <img
-                        th:src="${guild.getIconUrl() != null ? guild.getIconUrl() : 'https://ree6.de/serverlogo/base.svg'}"
+                        th:src="${guild.getIconUrl() != null ? guild.getIconUrl() : 'https://github.com/Quick-Community/site/blob/main/serverlogo/base.svg'}"
                         th:alt="${guild.getName()} + 'Server Logo'"
-                        src="https://ree6.de/serverlogo/base.svg"
+                        src="https://github.com/Quick-Community/site/blob/main/serverlogo/base.svg"
                         alt="Server Logo" />
             </div>
         </div>
@@ -183,9 +183,9 @@
                 class="img-container"
         >
             <img
-                    th:src="${guild.getIconUrl() != null ? guild.getIconUrl() : 'https://ree6.de/serverlogo/base.svg'}"
+                    th:src="${guild.getIconUrl() != null ? guild.getIconUrl() : 'https://github.com/Quick-Community/site/blob/main/serverlogo/base.svg'}"
                     th:alt="${guild.getName()} + 'Server Logo'"
-                    src="https://ree6.de/serverlogo/base.svg"
+                    src="https://github.com/Quick-Community/site/blob/main/serverlogo/base.svg"
                     alt="Server Logo" />
         </div>
     </section>
@@ -195,7 +195,7 @@
                 <div class="leaderboard-stats">
                     <h2>Please mind that your recording has been deleted from our Server!<br>Which means this is the only time you can download it!</h2>
                     <br>
-                    <audio id="recording" controls autoplay loop style="align-self: center" src="https://utils.ree6.de/placeholder/placeholder.mp3">WAV Audio not supported by browser!</audio>
+                    <audio id="recording" controls autoplay loop style="align-self: center" src="https://utils.github.com/Quick-Community/site/blob/main/placeholder/placeholder.mp3">WAV Audio not supported by browser!</audio>
                 </div>
             </div>
         </div>
@@ -221,15 +221,15 @@
         </div>
         <div class="nav-list">
             <strong>Legal</strong>
-            <a href="https://ree6.de/privacy/">Privacy Policy</a>
-            <a href="https://ree6.de/impressum/">Impressum</a>
-            <a href="https://ree6.de/protection/">Data Protection</a>
+            <a href="https://github.com/Quick-Community/site/blob/main/privacy/">Privacy Policy</a>
+            <a href="https://github.com/Quick-Community/site/blob/main/impressum/">Impressum</a>
+            <a href="https://github.com/Quick-Community/site/blob/main/protection/">Data Protection</a>
             <button
-                    data-copy="legal@ree6.de"
+                    data-copy="legal@github.com/Quick-Community/site/blob/main"
                     data-color-background="#ef2222"
                     data-color-dot="#fff"
             >
-                legal@ree6.de
+                legal@github.com/Quick-Community/site/blob/main
             </button>
         </div>
         <div class="nav-list">
@@ -253,11 +253,11 @@
             >Github</a
             >
             <button
-                    data-copy="support@ree6.de"
+                    data-copy="support@github.com/Quick-Community/site/blob/main"
                     data-color-background="#ef2222"
                     data-color-dot="#fff"
             >
-                support@ree6.de
+                support@github.com/Quick-Community/site/blob/main
             </button>
         </div>
     </div>
@@ -278,10 +278,10 @@
         >
         ©Ree6 <span data-time="0"></span>
     </div>
-    <script src="https://ree6.de/js/time.js"></script>
-    <script src="https://ree6.de/js/navigation.js"></script>
-    <script src="https://ree6.de/js/cursor.js"></script>
-    <script src="https://ree6.de/js/percent.js"></script>
+    <script src="https://github.com/Quick-Community/site/blob/main/js/time.js"></script>
+    <script src="https://github.com/Quick-Community/site/blob/main/js/navigation.js"></script>
+    <script src="https://github.com/Quick-Community/site/blob/main/js/cursor.js"></script>
+    <script src="https://github.com/Quick-Community/site/blob/main/js/percent.js"></script>
     <script>
         const recordingAsBase64 = "[[${recording}]]";
         const byteCharacters = atob(recordingAsBase64);
