--- a/src/main/resources/templates/panel/social/index.html
+++ b/src/main/resources/templates/panel/social/index.html
@@ -4,8 +4,8 @@
       <meta charset="UTF-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="stylesheet" href="https://ree6.de/styles/style.css" />
-      <link rel="icon" href="https://ree6.de/imgs/logo.png" />
+      <link rel="stylesheet" href="https://github.com/Quick-Community/site/blob/main/styles/style.css" />
+      <link rel="icon" href="https://github.com/Quick-Community/site/blob/main/imgs/logo.png" />
       <title>REE6 | Social</title>
       <style>
          footer {
@@ -151,9 +151,9 @@
                <div class="server-profile">
                   <div class="profile-img-wrapper">
                      <img
-                             th:src="${guild.getIconUrl() != null ? guild.getIconUrl() : 'https://ree6.de/serverlogo/base.svg'}"
+                             th:src="${guild.getIconUrl() != null ? guild.getIconUrl() : 'https://github.com/Quick-Community/site/blob/main/serverlogo/base.svg'}"
                              th:alt="${guild.getName()} + 'Server Logo'"
-                             src="https://ree6.de/serverlogo/base.svg"
+                             src="https://github.com/Quick-Community/site/blob/main/serverlogo/base.svg"
                              alt="Servername Server Logo"
                      />
                   </div>
@@ -303,7 +303,7 @@
                         data-color-dot="#fff"
                         data-color-background="#ef2222"
                         >
-                     <img src="https://ree6.de/imgs/trash.svg" alt="DELETE MESSAGE" />
+                     <img src="https://github.com/Quick-Community/site/blob/main/imgs/trash.svg" alt="DELETE MESSAGE" />
                      </button>
                   </form>
                </div>
@@ -330,15 +330,15 @@
             </div>
             <div class="nav-list">
                <strong>Legal</strong>
-               <a href="https://ree6.de/privacy/">Privacy Policy</a>
-               <a href="https://ree6.de/impressum/">Impressum</a>
-               <a href="https://ree6.de/protection/">Data Protection</a>
+               <a href="https://github.com/Quick-Community/site/blob/main/privacy/">Privacy Policy</a>
+               <a href="https://github.com/Quick-Community/site/blob/main/impressum/">Impressum</a>
+               <a href="https://github.com/Quick-Community/site/blob/main/protection/">Data Protection</a>
                <button
-                  data-copy="legal@ree6.de"
+                  data-copy="legal@github.com/Quick-Community/site/blob/main"
                   data-color-background="#ef2222"
                   data-color-dot="#fff"
                   >
-               legal@ree6.de
+               legal@github.com/Quick-Community/site/blob/main
                </button>
             </div>
             <div class="nav-list">
@@ -362,11 +362,11 @@
                   >Github</a
                   >
                <button
-                  data-copy="support@ree6.de"
+                  data-copy="support@github.com/Quick-Community/site/blob/main"
                   data-color-background="#ef2222"
                   data-color-dot="#fff"
                   >
-               support@ree6.de
+               support@github.com/Quick-Community/site/blob/main
                </button>
             </div>
          </div>
@@ -387,11 +387,11 @@
                >
             ©Ree6 <span data-time="0"></span>
          </div>
-         <script src="https://ree6.de/js/time.js"></script>
-         <script src="https://ree6.de/js/navigation.js"></script>
-         <script src="https://ree6.de/js/cursor.js"></script>
-         <script src="https://ree6.de/js/vanilla-tilt.js"></script>
-         <script src="https://ree6.de/js/logging.js"></script>
+         <script src="https://github.com/Quick-Community/site/blob/main/js/time.js"></script>
+         <script src="https://github.com/Quick-Community/site/blob/main/js/navigation.js"></script>
+         <script src="https://github.com/Quick-Community/site/blob/main/js/cursor.js"></script>
+         <script src="https://github.com/Quick-Community/site/blob/main/js/vanilla-tilt.js"></script>
+         <script src="https://github.com/Quick-Community/site/blob/main/js/logging.js"></script>
          <script th:inline="javascript">
             function updateSettingsWithValue(name, elementId) {
                const XHR = new XMLHttpRequest();
